@@ -41,7 +41,7 @@ public:
 	~Credits();
 
 	void loop(float timestep);
-	bool mouseButtonReleaseEvent(int button, int x, int y);
+	bool mouseButtonReleaseEvent(int button, const ppogl::Vec2i& position);
 	bool keyReleaseEvent(SDLKey key);
 };
 
